Fix zombie processes created by FullTeaching test suite (#145)
* Changes to deal with zombie processes

Refractoring to the base test class, making all test cases parametrized
and avoiding differences between test cases
Also minor fixes related to smells that sonar and IntelliJ detect

* Fixing the ReplyToCommentTest

* Changes requested:

- Removing exceptions where its handling its not appropiate.
- Removing blank and double-blank lines

* Changes requested:
- Adding exception to logintest

* Changes requested by Linter:
- Not used imports
- Replace string concatenation with {}
- Replace <= lists with .empty method