@@ -25,13 +25,11 @@ import org.openqa.selenium.remote.RemoteWebDriver;
 import org.openqa.selenium.support.ui.WebDriverWait;
 
 import java.net.MalformedURLException;
-import java.net.URL;
-import java.text.SimpleDateFormat;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.time.Duration;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
-import java.util.Arrays;
-import java.util.Date;
 import java.util.HashMap;
 import java.util.Map;
 
@@ -41,25 +39,18 @@ import static org.openqa.selenium.logging.LogType.BROWSER;
 public class ChromeUser extends BrowserUser {
     ChromeOptions options = new ChromeOptions();
 
-    public ChromeUser(String userName, int timeOfWaitInSeconds, String testName, String userIdentifier) {
-        super(userName, timeOfWaitInSeconds);
+    public ChromeUser(String userIdentifier, int timeOfWaitInSeconds, String testName) throws URISyntaxException, MalformedURLException {
+        super(userIdentifier, timeOfWaitInSeconds);
         log.info("Starting the configuration of the web browser");
-        log.debug(String.format("The Test names are: %s", testName));
 
         LoggingPreferences logPrefs = new LoggingPreferences();
         logPrefs.enable(BROWSER, ALL);
         options.setCapability("goog:loggingPrefs", logPrefs);
 
         //Problems with the max attempt of retry, solved with : https://github.com/aerokube/selenoid/issues/1124 solved with --disable-gpu
+        // options.addArguments("--disable-gpu"); Commented for the moment
         //Problems with flakiness due to screen resolution solved with --start-maximized
-        String[] arguments = {"--no-sandbox", "--disable-dev-shm-usage", "--allow-elevated-browser", "--disable-gpu", "--start-maximized"};
-
-        log.debug("Adding the arguments ({})", Arrays.toString(arguments));
-        for (String argument : arguments
-        ) {
-            options.addArguments(argument);
-        }
-
+        options.addArguments("--start-maximized");
         options.setAcceptInsecureCerts(true);
         //This capability is to store the logs of the test case
         log.debug("Added Capabilities of acceptInsecureCerts and ignore alarms");
@@ -68,42 +59,30 @@ public class ChromeUser extends BrowserUser {
             log.info("Using the Local WebDriver ()");
             this.driver = new ChromeDriver(options);
         } else {
-            try {
-
                 Map<String, Object> selenoidOptions = new HashMap<>();
                 log.info("Using the remote WebDriver (Selenoid)");
-                SimpleDateFormat format = new SimpleDateFormat("yyyy-MM-dd_HH:mm");
+                DateTimeFormatter dtf = DateTimeFormatter.ofPattern("yy-MM-dd-HH:mm");
+                LocalDateTime now = LocalDateTime.now();
+                String baseName = System.getProperty("tjob_name") + "-" + dtf.format(now) + "-" + testName + "-" + userIdentifier ;
+                log.debug("The data of this test are stored into .mp4 and .log files named: {}" , baseName);
                 log.debug("Adding all the extra capabilities needed: {testName,enableVideo,enableVNC,name,enableLog,videoName,screenResolution}");
+                //CAPABILITIES FOR SELENOID
 
-                selenoidOptions.put("testName", testName + "_" + userIdentifier + "_" + format.format(new Date()));
-                //CAPABILITIES FOR SELENOID RETORCH
+                selenoidOptions.put("testName", testName + "-" + userIdentifier + "-" + dtf.format(now));
                 selenoidOptions.put("enableVideo", true);
                 selenoidOptions.put("enableVNC", true);
                 selenoidOptions.put("name", testName + "-" + userIdentifier);
-
-                DateTimeFormatter dtf = DateTimeFormatter.ofPattern("yy-MM-dd-HH:mm");
-                LocalDateTime now = LocalDateTime.now();
-                String logName = System.getProperty("tjob_name") + "-" + dtf.format(now) + "-" + testName + "-" + userIdentifier + ".log";
-                String videoName = System.getProperty("tjob_name") + "-" + dtf.format(now) + "-" + testName + "-" + userIdentifier + ".mp4";
-                log.debug("The data of this test would be stored into: video name " + videoName + " and the log is " + logName);
-
                 selenoidOptions.put("enableLog", true);
-                selenoidOptions.put("logName ", logName);
-                selenoidOptions.put("videoName", videoName);
-
+                selenoidOptions.put("logName ", String.format("%s%s",baseName.replaceAll("\\s","") , ".log"));
+                selenoidOptions.put("videoName", String.format("%s%s",baseName.replaceAll("\\s","") ,".mp4"));
                 selenoidOptions.put("screenResolution", "1920x1080x24");
-
                 options.setCapability("selenoid:options", selenoidOptions);
-
                 //END CAPABILITIES FOR SELENOID RETORCH
                 log.debug("Configuring the remote WebDriver ");
-                RemoteWebDriver remote = new RemoteWebDriver(new URL("http://selenoid:4444/wd/hub"), options);
+                RemoteWebDriver remote = new RemoteWebDriver(new URI("http://selenoid:4444/wd/hub").toURL(), options);
                 log.debug("Configuring the Local File Detector");
                 remote.setFileDetector(new LocalFileDetector());
                 this.driver = remote;
-            } catch (MalformedURLException e) {
-                throw new RuntimeException("Exception creating eusApiURL", e);
-            }
         }
         log.debug("Configure the driver connection timeouts at ({})", this.timeOfWaitInSeconds);
         new WebDriverWait(driver, Duration.ofSeconds(this.timeOfWaitInSeconds));
